--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-
-    <Button
+    tools:context=".MainActivity"
+>
+    <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dca"
-        android:text="@string/DCA"
-        android:layout_toStartOf="@+id/bt1"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="-10dp"
-        android:backgroundTint="#4AC35E"
+        android:orientation="horizontal"
+        android:id="@+id/h_gd_3"
+        app:layout_constraintGuide_percent=".36"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/h_gd_4"
+        app:layout_constraintGuide_percent=".4"
         />
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/h_gd_5"
+        app:layout_constraintGuide_percent=".5"
+        />
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/h_gd_6"
+        app:layout_constraintGuide_percent=".6"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".07"
+        android:id="@+id/v_hd_.07"
+        />
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".385"
+        android:id="@+id/v_hd_3"
+        />
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".6"
+        android:id="@+id/v_gd_6"
+        />
+
     <Button
+        android:id="@+id/dca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/bt1"
+        android:backgroundTint="@color/green"
+        android:text="@string/DCA"
+        app:layout_constraintTop_toTopOf="@+id/h_gd_4"
+        app:layout_constraintEnd_toEndOf="@+id/v_hd_3"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_5"
+      android:layout_marginEnd="-12dp"
+
+        />
+
+    <Button
         android:id="@+id/mars"
-        android:text="@string/mars"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/bt1"
-        android:backgroundTint="#4AC35E"
-
-        android:layout_marginStart="-10dp"/>
-
- <Button
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:text="@string/bt1"
-     android:id="@+id/bt1"
-     android:textColor="@color/black"
-     android:backgroundTint="#9FE1A91C"
-     android:layout_centerInParent="true"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/bt1"
+        android:backgroundTint="@color/green"
+        android:text="@string/mars"
+app:layout_constraintStart_toStartOf="@+id/v_gd_6"
+        app:layout_constraintTop_toTopOf="@+id/h_gd_4"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_5"
+
+        android:layout_marginStart="-12dp"
+        tools:ignore="MissingConstraints" />
+
+
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/bt1"
+        android:backgroundTint="@color/yellow"
+        android:text="@string/bt1"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@+id/h_gd_4"
+        app:layout_constraintStart_toStartOf="@+id/v_hd_3"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_5"
+
+        app:layout_constraintEnd_toEndOf="@+id/v_gd_6"
+        />
+
+    <TextView
         android:id="@+id/tvFlights"
-        android:text="@string/tvFlights"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/bt1"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:text="@string/tvFlights"
+
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@+id/h_gd_3"
+        app:layout_constraintStart_toStartOf="@+id/v_gd_6"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_4"
+
+ />
 
     <TextView
         android:id="@+id/tvSpace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toStartOf="@+id/tvFlights"
-        android:layout_above="@+id/dca"
-        android:layout_marginEnd="18dp"
         android:text="@string/space"
-        />
+
+
+        app:layout_constraintTop_toTopOf="@+id/h_gd_3"
+        app:layout_constraintStart_toStartOf="@+id/v_hd_3"
+        app:layout_constraintEnd_toEndOf="@+id/v_gd_6"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_4"
+        android:layout_margin="8dp"
+     />
+
     <TextView
+        android:id="@+id/tvRovers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvRovers"
-        android:text="@string/tvRovers"
         android:layout_above="@+id/mars"
         android:layout_toEndOf="@+id/tvFlights"
-        android:layout_marginStart="18dp"/>
+        android:text="@string/tvRovers"
+
+android:layout_marginEnd="8dp"
+
+        app:layout_constraintTop_toTopOf="@+id/h_gd_3"
+        app:layout_constraintEnd_toEndOf="@+id/v_hd_3"
+        app:layout_constraintBottom_toTopOf="@+id/h_gd_4"
+
+ />
 
     <com.google.android.material.materialswitch.MaterialSwitch
+
+        android:id="@+id/Switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/on_way"
-        android:id="@+id/Switch"
-
-        android:thumbTint="@color/switch_thumb_color"
-        android:trackTint="@color/switch_track_color"
-
         android:layout_below="@+id/dca"
-        android:layout_marginTop="8dp"
-        android:padding="12dp"/>
+
+        android:padding="12dp"
+        android:text="@string/on_way"
+        app:layout_constraintTop_toBottomOf="@+id/h_gd_5"
+        app:layout_constraintStart_toEndOf="@+id/v_hd_.07"
+        app:layout_constraintBottom_toTopOf="@+id/tvTraveller"
+        app:layout_constraintEnd_toEndOf="@+id/v_hd_3"
+        android:thumbTint="@color/green"
+        android:trackTint="@color/green"
+   />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/green"
         android:padding="12dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
+android:id="@+id/tvTraveller"
+
+        android:textColor="@color/white"
+app:layout_constraintStart_toEndOf="@+id/v_hd_.07"
+      app:layout_constraintTop_toBottomOf="@+id/Switch"
+        app:layout_constraintBottom_toBottomOf="@+id/h_gd_6"
+        app:layout_constraintStart_toStartOf="@+id/v_hd_.07"
+        app:layout_constraintEnd_toEndOf="@+id/v_hd_3"
+
 
         android:text="@string/traveller"
-        android:background="#4AC35E"
-        android:layout_below="@+id/Switch"/>
+  />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+android:src="@drawable/roger"
+        android:contentDescription="@string/tvRovers"
+        android:id="@+id/roverImg"
+        app:layout_constraintBottom_toTopOf="@+id/tvRovers"
+        app:layout_constraintEnd_toStartOf="@+id/v_hd_3"
+        android:layout_marginEnd="18dp"
+        />
 
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/satellite"
+        android:contentDescription="@string/space"
+        android:id="@+id/spaceImg"
+        app:layout_constraintBottom_toTopOf="@+id/tvSpace"
+        app:layout_constraintEnd_toStartOf="@+id/v_gd_6"
+        app:layout_constraintStart_toEndOf="@+id/v_hd_3"
+
+        />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/flight"
+        android:contentDescription="@string/tvFlights"
+        android:id="@+id/flightImg"
+        app:layout_constraintBottom_toTopOf="@+id/tvFlights"
+        app:layout_constraintStart_toStartOf="@+id/v_gd_6"
+        android:layout_marginStart="18dp"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
