--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="switch_thumb_color">#4AC35E</color>
-    <color name="switch_track_color">#4AC35E</color>
+    <color name="green">#4AC35E</color>
+    <color name="yellow">#9FE1A91C</color>
 </resources>
